// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handler checks for existing case 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      null,
      Object {
        "ids": "0,1",
        "pdas": "1",
        "worksites": "2",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handler creates a new callback 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      null,
      Object {
        "status": "CREATED",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handler denies a callback 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      null,
      Object {
        "status": "UNLOCKED",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handler sets agent state 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "agentId": "xxxx",
        "agentState": "routable",
        "connection_id": null,
        "current_contact_id": null,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handler sets agent state 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      null,
      Object {
        "promptCallType": "OUTBOUND",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
